# devilutionX-android

./: .gitignore  README.md  build.gradle  prepare.sh  settings.gradle
SDL2/src/audio/: SDL_audiotypecvt.c
SDL2_mixer/: CMakeLists.txt  build.gradle
SDL2_ttf/: CMakeLists.txt  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
